# browser-game

./: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
playground/: index.html
shaders/: base.wgsl
src/: engine.ts  entity.ts  game-object.ts  index.ts  input.ts  loader.ts  renderer.ts  shader.ts
src/engine/: const.ts
src/engine/components/: camera.ts  character-controller.ts  collider.ts  component.ts  index.ts  mesh.ts  sync.ts  transform.ts
src/engine/components/lights/: direct-light.ts  point-light-component.ts  point-light.ts
src/engine/core/: engine-event-listener.ts  engine.ts  engineEventListener.ts  entity.ts  game-object.ts  index.ts  input.ts  loader.ts  network.ts  network.types.ts  renderer.ts  scene.ts  shader.ts  tree.ts  ui.ts
src/engine/core/renderer/: index.ts  mesh-renderer.ts  renderer.ts  shadow-renderer.ts
src/engine/resources/: index.ts  material.ts  texture.ts
src/server/: CMakeLists.txt  main.cpp  physics_world.cpp  physics_world.hpp  room.cpp  room.hpp  simple_scene.cpp  simple_scene.hpp
src/server/scene/: game-object.cpp  game-object.hpp  physics_world.cpp  physics_world.hpp  scene.cpp  scene.hpp  tree.cpp  tree.hpp
src/server/scene/components/: collider.cpp  collider.hpp  component.cpp  component.hpp  components-manager.cpp  components-manager.hpp  transform.cpp  transform.hpp
static/: index.html
static/assets/: cube.mtl
static/assets/car/: car.mtl
static/shaders/: base.wgsl  collider.wgsl  shadow.wgsl
